# ImageProcessing

./: .gitignore  Bitmap.cpp  Bitmap.h  CMakeLists.txt  Image.cpp  Image.h  ImageProcessing.cpp  ImageProcessing.h  Pixel.cpp  Pixel.h  Process.cpp  Process.h  ProcessStrategy.cpp  ProcessStrategy.h  README.md  common.h  main.cpp
ImageProcessing/: ImageProcessingContrastConversion.cpp  ImageProcessingContrastConversion.h  ImageProcessingGammaCorrection.cpp  ImageProcessingGammaCorrection.h  ImageProcessingHistogramExtension.cpp  ImageProcessingHistogramExtension.h
ImageProcessingUsingMaskPattern/: ImageProcessingAverageSmoothing.cpp  ImageProcessingAverageSmoothing.h  ImageProcessingEdgeExtraction.cpp  ImageProcessingEdgeExtraction.h  ImageProcessingEdgeExtractionRoberts.cpp  ImageProcessingEdgeExtractionRoberts.h  ImageProcessingEdgeExtractionSobel.cpp  ImageProcessingEdgeExtractionSobel.h  ImageProcessingEdgeExtractionX.cpp  ImageProcessingEdgeExtractionX.h  ImageProcessingEdgeExtractionXYAbs.cpp  ImageProcessingEdgeExtractionXYAbs.h  ImageProcessingEmboss.cpp  ImageProcessingEmboss.h  ImageProcessingSharpening.cpp  ImageProcessingSharpening.h  ImageProcessingSmoothing.cpp  ImageProcessingSmoothing.h  ImageProcessingUsingMaskPattern.cpp  ImageProcessingUsingMaskPattern.h
ImageProcessingUsingResultTable/: ImageProcessingContrastConversion.cpp  ImageProcessingContrastConversion.h  ImageProcessingGammaCorrection.cpp  ImageProcessingGammaCorrection.h  ImageProcessingHistogramExtension.cpp  ImageProcessingHistogramExtension.h  ImageProcessingNegative.cpp  ImageProcessingNegative.h  ImageProcessingSigmoidConversion.cpp  ImageProcessingSigmoidConversion.h  ImageProcessingSolarization.cpp  ImageProcessingSolarization.h  (+2 more)
(+2 files in other folders)
