cmake_minimum_required(VERSION 3.10)
project(ImageProcessingUsingResultTable)

set(CMAKE_CXX_STANDARD 11)

add_executable(ImageProcessingUsingResultTable main.cpp Bitmap.cpp Bitmap.h common.h Pixel.cpp Pixel.h ImageProcessing.cpp ImageProcessing.h ImageProcessingUsingResultTable/ImageProcessingContrastConversion.cpp ImageProcessingUsingResultTable/ImageProcessingContrastConversion.h Image.cpp Image.h ImageProcessingUsingResultTable/ImageProcessingGammaCorrection.cpp ImageProcessingUsingResultTable/ImageProcessingGammaCorrection.h ImageProcessingUsingResultTable/ImageProcessingHistogramExtension.cpp ImageProcessingUsingResultTable/ImageProcessingHistogramExtension.h ImageProcessingUsingResultTable/ImageProcessingUsingResultTable.cpp ImageProcessingUsingResultTable/ImageProcessingUsingResultTable.h ImageProcessingUsingResultTable/ImageProcessingSigmoidConversion.cpp ImageProcessingUsingResultTable/ImageProcessingSigmoidConversion.h)